Fixed gallery overflow issue

--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -44,6 +44,9 @@
 .custom-mask {
   background: transparent !important;
 }
+.overflow{
+  overflow: hidden;
+}
 
 @media screen and (max-width: 608px) {
   .product-container {
